@@ -142,6 +142,7 @@ set (client-src
   src/client/MainMenu.cpp
   src/client/NyiDialog.cpp
   src/client/StateManager.cpp
+  src/client/StateSaver.cpp
   src/client/main.cpp
   )
 add_executable(rainbrurpg-client ${client-src})
