@@ -122,8 +122,30 @@ Error is fixed, was due to a src/services/Services.hpp old code
   and a way to tell the user to create a profile before using the 
   server/local test
 **** TODO Handle the Options gamestate
+     CLOCK: [2016-11-16 mer. 02:11]--[2016-11-16 mer. 02:39] =>  0:28
+     CLOCK: [2016-11-16 mer. 01:52]--[2016-11-16 mer. 02:11] =>  0:19
+     CLOCK: [2016-11-16 mer. 00:25]--[2016-11-16 mer. 00:54] =>  0:29
+- [-] Must handle 'Alt + Enter' keybinding to switch fullscreen status
+  - [ ] Handle the keybinding in GameEngine, so it's available in all gamestates
+  - [-] How to make it happens with Ogre3D 
+    see http://ogre3d.org/forums/viewtopic.php?f=2&t=10811
+    We have to save state, kill renderWindow and recreate it
+    - [-] Maybe implement a StateSaver (with unit tests) to handle
+      the storage, for example in an associative array as strings,
+      from and to typed variables using template functions.
+      - [X] Do we need to search for boost.variant in cmake ?? NO
+      - [X] Maybe a map of boost::variant
+      - [X] Must throw error if key can't be found or not unique
+      - [ ] Exception must be correctly handle by subclasses	
+      - Must handle cast errors in a exception-based way
+      - We can also handle CEGUI::Windows size and position and add
+	some typed ::apply(const str& name, Window*) functions.
+      - [ ] Then we'll need two GameState pure virtual function
+	maybe save/load or ???/restore (what's the antonym)
+      - [ ] Then implement them in MainMenu
+	save the visible state of NyiDialogs, positions of windows etc...
 - [ ] It could be fine if this changes could be serialized in the same
-  way Oger does it. This way, at next startup, the Ogre config dialog
+  way Ogre does it. This way, at next startup, the Ogre config dialog
   would be defaulted to in-game options.
 - [ ] May remove the src/client/LoadingBar.* (not used anymore)
   Maybe keep it to change it to a CEGUI layout, used multiple times
